# kilonova-bayesian-analysis

./: .gitignore  HSTkilonovadata.txt  README.md  bol_to_band.py  dynesty_sampler.py  job_NASA.sh  job_helios.sh  job_lightcurve.sh  job_lightcurve_helios.sh  job_parameter_estimation_kilonova.sh  job_parameter_estimation_shock.sh  job_test.sh  parallel-latest.tar.bz2  parallel_parameter_estimation.sh  parameter_estimation.py  parameter_estimation_test.py  produce_data.sh  produce_lightcurve.py  pyproject.toml  script_parameter_estimation.sh  series_parameter_estimation.sh  single_parameter_estimation.sh  test  test_parallel.py  test_parallel.sh  test_parameter_estimation.sh
analysis-1/: parameter_estimation_kilonova.py  parameters.py  produce_lightcurve.py  test_parameter_estimation.sh
analysis-1/input_files/: SNR_fiducial_kilonova_40Mpc.ecsv  SNR_fiducial_kilonova_uvboost_100Mpc.ecsv  SNR_fiducial_kilonova_uvboost_100Mpc_12hours.ecsv  (+6 more)
input_files/: 10.ecsv
output_files/: read_priors_parameters.py  view_results_corner.py
post_processing/: Cornerplots.ipynb  Evidence.ipynb  Geerts_intrigue_cornerplots.ipynb  Heatmaps.ipynb  add_live_points.sh  check_logz_results.py  cornerplots.py  figures_model_selection.py  figures_parameter_estimation.py  get_hdi.py  heatmaps.py  heatmaps_evidence_bayes.py  print_results.py  view_results_corner.py  view_results_getdist.py
produce-data/: Geerts-intrigue-plots.py  check-data.py  figure_1.py  plot-data.py  produce-data.py  test_redden.py
save-dorado-sampler/: ETC.py  bol_to_band.py  produce_lightcurve_old.py  shock_model.py
(+20 files in other folders)
